
[TestParseTypeDefinition - 1]
&statements.TypeDefinitionNode{
    Comments:   {" Documentation comment"},
    Attributes: {
        &attributes.AttributeNode{
            Name:  "foo",
            Value: nil,
            Facts: (*database.Facts)(nil),
        },
    },
    Name:       "Foo",
    Parameters: {
    },
    Representation: &statements.MarkerTypeRepresentation{},
    Facts:          (*database.Facts)(nil),
}
---

[TestParseGenericTypeDefinition - 1]
&statements.TypeDefinitionNode{
    Comments:   {},
    Attributes: {
    },
    Name:       "Foo",
    Parameters: {
        &types.TypeParameterNode{
            Name:  "value",
            Infer: false,
            Value: nil,
            Facts: (*database.Facts)(nil),
        },
    },
    Representation: &statements.MarkerTypeRepresentation{},
    Facts:          (*database.Facts)(nil),
}
---

[TestParseMarkerTypeDefinition - 1]
&statements.TypeDefinitionNode{
    Comments:   {},
    Attributes: {
    },
    Name:       "Foo",
    Parameters: {
    },
    Representation: &statements.MarkerTypeRepresentation{},
    Facts:          (*database.Facts)(nil),
}
---

[TestParseStructureTypeDefinition - 1]
&statements.TypeDefinitionNode{
    Comments:   {},
    Attributes: {
    },
    Name:       "Foo",
    Parameters: {
    },
    Representation: &statements.StructureTypeRepresentation{
        Fields: {
            {
                Name: "a",
                Type: &types.NamedTypeNode{
                    Name:       "A",
                    Parameters: nil,
                    Facts:      (*database.Facts)(nil),
                },
                Span: database.Span{},
            },
            {
                Name: "b",
                Type: &types.NamedTypeNode{
                    Name:       "B",
                    Parameters: nil,
                    Facts:      (*database.Facts)(nil),
                },
                Span: database.Span{},
            },
        },
        Span: database.Span{},
    },
    Facts: (*database.Facts)(nil),
}
---

[TestParseEnumerationTypeDefinition - 1]
&statements.TypeDefinitionNode{
    Comments:   {},
    Attributes: {
    },
    Name:       "Foo",
    Parameters: {
    },
    Representation: &statements.EnumerationTypeRepresentation{
        Variants: {
            {
                Name:     "Some",
                Elements: {
                    &types.NamedTypeNode{
                        Name:       "Number",
                        Parameters: nil,
                        Facts:      (*database.Facts)(nil),
                    },
                },
                Span: database.Span{},
            },
            {
                Name:     "None",
                Elements: nil,
                Span:     database.Span{},
            },
        },
        Span: database.Span{},
    },
    Facts: (*database.Facts)(nil),
}
---

[TestParseTraitDefinition - 1]
&statements.TraitDefinitionNode{
    Comments:   {},
    Attributes: {
    },
    Name:       "Foo",
    Parameters: {
    },
    Type: &types.NamedTypeNode{
        Name:       "Number",
        Parameters: nil,
        Facts:      (*database.Facts)(nil),
    },
    Constraints: nil,
    Facts:       (*database.Facts)(nil),
}
---

[TestParseGenericTraitDefinition - 1]
&statements.TraitDefinitionNode{
    Comments:   {},
    Attributes: {
    },
    Name:       "Foo",
    Parameters: {
        &types.TypeParameterNode{
            Name:  "value",
            Infer: false,
            Value: nil,
            Facts: (*database.Facts)(nil),
        },
    },
    Type: &types.FunctionTypeNode{
        Inputs: {
            &types.TypeParameterNode{
                Name:  "value",
                Infer: false,
                Value: nil,
                Facts: (*database.Facts)(nil),
            },
        },
        Output: &types.NamedTypeNode{
            Name:       "Number",
            Parameters: nil,
            Facts:      (*database.Facts)(nil),
        },
        Facts: (*database.Facts)(nil),
    },
    Constraints: nil,
    Facts:       (*database.Facts)(nil),
}
---

[TestParseConstantDefinition - 1]
&statements.ConstantDefinitionNode{
    Comments:   {},
    Attributes: {
    },
    Name: "show",
    Type: &types.FunctionTypeNode{
        Inputs: {
            &types.TypeParameterNode{
                Name:  "value",
                Infer: false,
                Value: nil,
                Facts: (*database.Facts)(nil),
            },
        },
        Output: &types.NamedTypeNode{
            Name:       "Unit",
            Parameters: nil,
            Facts:      (*database.Facts)(nil),
        },
        Facts: (*database.Facts)(nil),
    },
    Constraints: {
        &constraints.BoundConstraintNode{
            Trait:      "Show",
            Parameters: {
                &types.TypeParameterNode{
                    Name:  "value",
                    Infer: false,
                    Value: nil,
                    Facts: (*database.Facts)(nil),
                },
            },
            Facts: (*database.Facts)(nil),
        },
    },
    Facts: (*database.Facts)(nil),
}
---

[TestParseSimpleValuedInstanceDefinition - 1]
&statements.InstanceDefinitionNode{
    Comments:   {},
    Attributes: {
    },
    Bound: &constraints.BoundConstraintNode{
        Trait:      "Foo",
        Parameters: {
            &types.NamedTypeNode{
                Name:       "Number",
                Parameters: nil,
                Facts:      (*database.Facts)(nil),
            },
        },
        Facts: (*database.Facts)(nil),
    },
    Constraints: nil,
    Value:       &expressions.NumberExpressionNode{
        Value: "3.14",
        Facts: (*database.Facts)(nil),
    },
    Facts: (*database.Facts)(nil),
}
---

[TestParseComplexValuedInstanceDefinition - 1]
&statements.InstanceDefinitionNode{
    Comments:   {},
    Attributes: {
    },
    Bound: &constraints.BoundConstraintNode{
        Trait:      "Foo",
        Parameters: {
            &types.NamedTypeNode{
                Name:       "Maybe",
                Parameters: {
                    &types.TypeParameterNode{
                        Name:  "value",
                        Infer: false,
                        Value: nil,
                        Facts: (*database.Facts)(nil),
                    },
                },
                Facts: (*database.Facts)(nil),
            },
        },
        Facts: (*database.Facts)(nil),
    },
    Constraints: {
        &constraints.BoundConstraintNode{
            Trait:      "Foo",
            Parameters: {
                &types.TypeParameterNode{
                    Name:  "value",
                    Infer: false,
                    Value: nil,
                    Facts: (*database.Facts)(nil),
                },
            },
            Facts: (*database.Facts)(nil),
        },
    },
    Value: &expressions.NumberExpressionNode{
        Value: "3.14",
        Facts: (*database.Facts)(nil),
    },
    Facts: (*database.Facts)(nil),
}
---

[TestParseAssignment - 1]
&statements.AssignmentNode{
    Pattern: &patterns.VariablePatternNode{
        Variable: "x",
        Facts:    (*database.Facts)(nil),
        matching: nil,
    },
    Value: &expressions.NumberExpressionNode{
        Value: "123",
        Facts: (*database.Facts)(nil),
    },
    Facts:     (*database.Facts)(nil),
    temporary: nil,
}
---

[TestParseExpressionStatement - 1]
&statements.ExpressionStatementNode{
    Expression: &expressions.NumberExpressionNode{
        Value: "123",
        Facts: (*database.Facts)(nil),
    },
    Facts: (*database.Facts)(nil),
}
---
